fixed bug for issue #3601